# GAS

./: README.md  pyproject.toml
LAMMPS/: README.md  SiO2_partial_crystal_in  lmp_struc_gen.py  orth.py  plotPDF.py
PDFs/: PDF_3body.py  PDF_3body_demo.ipynb  PDF_show.py
gas/: __init__.py
gas/LAMMPS/: SiO2_rate13_in
gas/PDFs/: PDF_3body.py  RDF_2D.py  RDFs.py
gas/PDFs/PDFs_utils/: PDF_show.py  cmap.py  kernels.py  near_neighbors.cu  rdf.cu
gas/PDFs/notebooks/: PDF_3body_demo.ipynb  RDF_2body_demo.ipynb
gas/generation/: nc_seeds.py  utils.py
gas/generation/example_files/: mp-149_as_Au.cif
gas/io/: xyz.py
generation/: utils.py
